decisamente meglio now

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <h1 id="title">
          Seleziona il livello di difficoltà e genera la griglia
       </h1>
+      <div id="risultato">
+         
+      </div>
    </div>
 
 <!-- FOOTER -->
